--- a/src/Toys/Toys.css
+++ b/src/Toys/Toys.css
@@ -87,6 +87,7 @@
     color: #555;
     display: -webkit-box;
     -webkit-line-clamp: 2;
+    line-clamp: 2;
     -webkit-box-orient: vertical;
     overflow: hidden;
 }
